Fixed scroller position to start at the end of the chat in safari.
Need to fix large space on the top of the chat for the chat on safari. Seems to be with how it renders flex column-reverse and an element that is a column-reverse list as well. It doesn't play well.

--- a/FrontEnd/code/src/screens/MessageCenter/Messages/Messages.module.sass
+++ b/FrontEnd/code/src/screens/MessageCenter/Messages/Messages.module.sass
@@ -41,12 +41,12 @@
     overflow-y: auto
     overflow-x: hidden
     width: 100%
-    display: grid
+    display: flex
+    flex-direction: column-reverse
     justify-items: center
 
 .messages
     position: relative
-    flex-grow: 1
     width: 100%
     display: flex
     margin: 0 auto
